--- a/lectio/mateo/mateo2.html
+++ b/lectio/mateo/mateo2.html
@@ -12,7 +12,7 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!--<br>**************************************************<br>-->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
         <a href="./index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
@@ -537,12 +537,24 @@
     </details></li>
     <!--<br>**************************<br>-->
     <li><details class="select">
-      <summary>metanoia</summary>
+      <summary>Metanoia</summary>
         <ol>
+          <h3>Inceptum </h3>
+        <li>El Señor se Comunica con cada persona a cada persona de manera que pueda entenderlo.</li>
+        <li>El rechazo de Dios, genera sufrimiento.</li>
+        <li>El Señor se comunica a través de signos cómo sueños, una estrella, la Zarza, profecías, la historia, etc.</li>
+        <h3>Discernimentum</h3>
+        <li>el mal es el deseo del bien sin tener a Dios presente.</li>
+        <li>La iniciativa siempre la tiene el bien, el mal responderá con violencia.</li>
+        <h3>Oratio</h3>
+        <li>Dios nos habla a través de lo que amamos. Porque dónde está nuestro tesoro está nuestro corazón y también nuestra atención</li>
+        <li>La humildad nos lleva a la verdad, Y está al bien. La falta de ella a la mentira y al mal.</li>
+        <li>La violencia es relativa a los fines, las formas y las circunstancias</li>
         <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <h3>Scientia</h3>
+        <li>Cada acto bueno, nos revela al señor nos muestra algo que necesitamos saber y aprender para vivir.</li>
+        <li>Dios, jamás abandona a una persona, siempre está guiándola e inspirándola al bien.</li>
+      
       </ol>
     </details></li>
     <!--<br>**************************<br>-->
