--- a/oracion/oracion.html
+++ b/oracion/oracion.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>ORACION</title>
+    <title>ORACIÓN</title>
   </head>
 
   <body>
@@ -15,7 +15,7 @@
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
         <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="../indiceGeneral.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
@@ -28,12 +28,18 @@
      <section id="libros">
 
        <div>
-         <H2>ENLACES A TEMAS</H2>
+         <H2>ENLACES </H2>
          <ol>
+          <h3 class="cita">Católicas</h3>
            <li class="li"><a href="../oracion/rosario.html">ROSARIO</a></li>
+
+           <h3 class="cita">Teresa de Jesús</h3>
            <li class="li"><a href="../oracion/CastilloInterior.html">LAS MORADAS</a></li>
            <li class="li"><a href="../oracion/CaminoDEPerfeccion.html">CAMINO DE PERFECCIÓN</a></li>
-           <li class="li"><a href="../oracion/compendioOracion.html">ORACIÓN</a></li>
+           <h3 class="cita">Francisco de Sales</h3>
+           <li class="li"><a href="../oracion/franciscoDeSales.html">Francisco de Sales </a></li>
+           <h3 class="cita">Personal</h3>
+           <li class="li"><a href="../oracion/compendioOracion.html">ORACIÓN Personal</a></li>
            <li class="li"><a href="./TestigosDFe.html">TESTIGOS DE LA FE
 
            </a></li>
