--- a/indiceGeneral.html
+++ b/indiceGeneral.html
@@ -879,7 +879,7 @@
       <summary>Elegidos </summary>
       <p>Es universal, todos estamos llamados a ser uno con Cristo<br><br>
    <ol>
-      <li>Dios nos guía y ayuda en todo momento</li>
+      <li>Dios, jamás abandona a una persona, siempre está guiándola e inspirándola al bien.</li>
       <li>Exige una respuesta radical</li>
       <li>Una vida de permanente conversión (Fe, Esperanza y Amor) </li>
       <li>Implica una renuncia a todo lo que nos aleja del Señor</li>
@@ -894,16 +894,33 @@
     </details></li>
     <!-- ****************************** -->
       <li><details class="select">
+        <summary>Communicare</summary>
+        <ol>
+          <li>El Señor se Comunica con cada persona a cada persona de manera que pueda entenderlo. Una zarza ardiendo, sueños, una estrella, una parábola, un milagro, etc. </li>
+          <li>Dios nos habla a través de lo que amamos. Porque dónde está nuestro tesoro está nuestro corazón y también nuestra atención</li>
+          <li></li>
+          <li></li>
+        </ol>
+        <p><br><br>Comunicarse</p>
+      </details></li>
+    <!-- ****************************** -->
+      <li><details class="select">
         <summary></summary>
         <p><br><br></p>
       </details></li>
+    <!-- ****************************** -->
+      <li><details class="select">
+        <summary></summary>
+        <p><br><br></p>
+      </details></li>
+    <!-- ****************************** -->
       <h3 class="cita">Scientia Domini</h3>
       <p><b><i>Conocer al Señor</i></b></p>
       <li><details class="select">
         <summary>El Magisterio</summary>
         <ol>
           <li>La referencia fundamental del conocimiento del Señor es la iglesia y su magisterio</li>
-          <li></li>
+          <li>Cada acto bueno, nos revela al Señor nos muestra algo que necesitamos saber y aprender para vivir.</li>
           <li></li>
           <li></li>
         </ol>
@@ -934,7 +951,6 @@
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
-      <!-- ****************************** -->
       <h3 class="cita">Discernimentum</h3>
    <p>   <b><i>Aprender a elegir El Bien</i></b></p>
         
@@ -953,6 +969,9 @@
       <li>El bien se inicia con la verdad y lleva a la libertad</li>
       <li>El bien es un hábito, inicia con: Definir o decidir, el orden, y la vivencia de la libertad</li>
       <li>El tipo de vida puede obstruir o ayudar al encuentro con el Señor.</li>
+      <li>El mal es el deseo del bien sin tener a Dios presente.</li>
+      <li>La iniciativa siempre la tiene el bien, el mal responderá con violencia.</li>
+      <li>La humildad nos lleva a la verdad, Y está al bien. La falta de ella a la mentira y al mal.</li>
       <li></li>
     </ol>
   </p>
