--- a/lectio/mateo/mateo2.html
+++ b/lectio/mateo/mateo2.html
@@ -539,7 +539,7 @@
     <li><details class="select">
       <summary>Metanoia</summary>
         <ol>
-          <h3>Inceptum </h3>
+          <h3>Inceptum Divinum </h3>
         <li>El Señor se Comunica con cada persona a cada persona de manera que pueda entenderlo.</li>
         <li>El rechazo de Dios, genera sufrimiento.</li>
         <li>El Señor se comunica a través de signos cómo sueños, una estrella, la Zarza, profecías, la historia, etc.</li>
@@ -839,9 +839,17 @@
     <li><details class="select">
       <summary>Metanoia</summary>
         <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <h3>Inceptum Divinum</h3>
+        <li>Dios actua teniendo en cuenta la naturaleza decada persona</li>
+        <li>Dios es el Señor de la historia</li>
+        <h3>Scientia Domini</h3>
+        <li>Siempre lo más simple, lo pequeño</li>
+        <h3>Discernimentum</h3>
+        <li>Como José, primero la obediencia</li>
+      
+        <H4>Oratio</H4>
+        <li>Primero la verdad <br>Primum Verum</li>
+        <li>Segundo la Libertad <br>Secundum Libertatem</li>
         <li></li>
       </ol>
     </details></li>
