--- a/oracion/oracion.html
+++ b/oracion/oracion.html
@@ -19,11 +19,10 @@
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
+    <h1 class="init">Oración</h1>
        <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor,<br> ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</h3>
 
- 
     <!-- ENLACE A PÁGINAS **********************************************************-->
      <section id="libros">
 
