--- a/lectio/mateo/index.html
+++ b/lectio/mateo/index.html
@@ -30,15 +30,15 @@
   <div>
     <ol>
       <li class="li"><a href="./mateo1.html"> 2 perícopas  </a></li>
-      <li class="li"><a href="./mateo2.html"> 3 perícopas  </a></li>
-      <li class="li"><a href="./mateo3.html"> 8 perícopas  </a></li>
-      <li class="li"><a href="./mateo4.html"> 4 perícopas  </a></li>
-      <li class="li"><a href="./mateo5.html"> 4 perícopas  </a></li>
-      <li class="li"><a href="./mateo6.html"> 7 perícopas  </a></li>
-      <li class="li"><a href="./mateo7.html"> 8 perícopas  </a></li>
-      <li class="li"><a href="./mateo8.html"> 7 perícopas  </a></li>
-      <li class="li"><a href="./mateo9.html"> 8 perícopas  </a></li>
-      <li class="li"><a href="./mateo10.html">6  perícopas /51</a></li>
+      <li class="li"><a href="./mateo2.html"> 3 perícopas-5  </a></li>
+      <li class="li"><a href="./mateo3.html"> 2 perícopas-7  </a></li>
+      <li class="li"><a href="./mateo4.html"> 4 perícopas-11  </a></li>
+      <li class="li"><a href="./mateo5.html"> 4 perícopas-15  </a></li>
+      <li class="li"><a href="./mateo6.html"> 8 perícopas-23  </a></li>
+      <li class="li"><a href="./mateo7.html"> 8 perícopas-31  </a></li>
+      <li class="li"><a href="./mateo8.html"> 7 perícopas-38  </a></li>
+      <li class="li"><a href="./mateo9.html"> 8 perícopas-46  </a></li>
+      <li class="li"><a href="./mateo10.html">6  perícopas-52</a></li>
       <li class="li"><a href="./mateo11.html"> 5 perícopas </a></li>
       <li class="li"><a href="./mateo12.html"> 8 perícopas </a></li>
       <li class="li"><a href="./mateo13.html"> 11 perícopas </a></li>
@@ -47,7 +47,7 @@
       <li class="li"><a href="./mateo16.html"> 4 perícopas </a></li>
       <li class="li"><a href="./mateo17.html"> 5 perícopas </a></li>
       <li class="li"><a href="./mateo18.html"> 7 perícopas </a></li>
-      <li class="li"><a href="./mateo19.html"> 6 perícopas /105 </a></li>
+      <li class="li"><a href="./mateo19.html"> 6 perícopas  </a></li>
       <li class="li"><a href="./mateo20.html"> 5 perícopas </a></li>
       <li class="li"><a href="./mateo21.html"> 6 perícopas </a></li>
       <li class="li"><a href="./mateo22.html"> 5 perícopas </a></li>
@@ -55,7 +55,7 @@
       <li class="li"><a href="./mateo24.html"> 8 perícopas </a></li>
       <li class="li"><a href="./mateo25.html"> 3 perícopas </a></li>
       <li class="li"><a href="./mateo26.html"> 11 perícopas </a></li>
-      <li class="li"><a href="./mateo27.html"> 9 perícopas /156 </a></li>
+      <li class="li"><a href="./mateo27.html"> 9 perícopas  </a></li>
       <li class="li"><a href="./mateo28.html"> 4 perícopas </a></li>
       <li class="li"><a href="#1">NOTAS </a></li>
   
