--- a/lectio/mateo/mateo6.html
+++ b/lectio/mateo/mateo6.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
-  <title>LECTIO MATEO</title>
+  <title>APOLOGÉTICA</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
