--- a/latin/numeracion.html
+++ b/latin/numeracion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/style.css" />
-    <title>LATÍN</title>
+    <title>Latin</title>
   </head>
   <body>
     <p id="alInicio" class="principio"></p>
@@ -15,12 +15,12 @@
         <a href="#alInicio"
           ><img src="../media/ESCUDOCARM.png" alt="" class="logoC"
         /></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="./index.html" class="nombre">INICIO </a>
       </div>
     </header>
     <br /><br />
     <!-- ****************************************************************** -->
-    <h1 class="init">INDEX</h1>
+    <h1 class="init">Matemáticas</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor, <br />
       ni aceptes como Amor lo que no proviene de la Verdad" <br />EDITH STEIN
@@ -30,56 +30,104 @@
 
     <section id="0">
       <hr />
-      <h1>TEMAS</h1>
+      <h1>Temas</h1>
       <div>
         <ol>
-          <li class="li"><a href="./Latin.html">MATERNA VOX ECCLESIA</a></li>
-          <li class="li">
-            <a href="./Nobilis.Phrases.html">FRASES DE SANTOS </a>
-          </li>
-          <li class="li"><a href="./saludos.html">01 SALUDOS</a></li>
-          <li class="li"><a href="./numeracion.html">02 MATEMÁTICAS, +MESES</a></li>
-          <li class="li"><a href=""></a></li>
-          <li class="li"><a href=""></a></li>
+          <li class="li"><a href="#1">Números cardinales y Ordinales</a></li>
+          <li class="li"><a href="#2">FECHAS</a></li>
+          <li class="li"><a href="#3"></a></li>
+          <li class="li"><a href="#4"></a></li>
+          <li class="li"><a href="#5"></a></li>
+          <li class="li"><a href="#6"></a></li>
+          <li class="li"><a href="#7"></a></li>
         </ol>
       </div>
     </section>
     <!-- ****************************************************************** -->
     <section id="1">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Numeración</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
-            <summary>El Texto</summary>
+            <summary>Números Cardinales (para contar cosas)</summary>
+            <ul>
+              <li>
+                1 => ūnus, -a, -um => ú-nus (masc.), ú-na (fem.), ú-num (neut.)
+              </li>
+              <li>
+                2 => duo, duae, duo => dúo (masc.), dúae (fem.), dúo (neut.)
+              </li>
+              <li>3 => trēs, tria => trés (masc./fem.), trí-a (neut.)</li>
+              <li>4 => quattuor => cuátu-or</li>
+              <li>5 => quīnque => cuín-cue</li>
+              <li>6 => sex => séx</li>
+              <li>7 => septem => sép-tem</li>
+              <li>8 => octō => ók-to</li>
+              <li>9 => novem => nó-vem</li>
+              <li>10 => decem => dé-kem</li>
+              <li>11 => ūndecim =></li>
+              <li>12 => duodecim =></li>
+              <li>13 => tredecim =></li>
+              <li>14 => quattuordecim =></li>
+              <li>15 => quīndecim =></li>
+              <li>16 => sēdecim =></li>
+              <li>17 => septendecim =></li>
+              <li>18 => duodēvīgintī =></li>
+              <li>19 => ūndēvīgintī =></li>
+              <li>20 => vīgintī =></li>
+              <li></li>
+            </ul>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Variaciones en el Texto</summary>
+            <summary>Números Ordinales</summary>
+            <ol>
+              <p> Español => Masculino => Femenino=> neutro</p>
+              <li>Primero => prīmus => prīma => prīmum</li>
+              <li>Segundo => secundus => secunda => secundum</li>
+              <li>Tercero => tertius => tertia => tertium</li>
+              <li>Cuarto => quārtus => quārta => quārtum</li>
+              <li>Quinto => quīntus => quīnta => quīntum</li>
+              <li>Sexto => sextus => sexta => sextum</li>
+              <li>Séptimo => septimus => septima => septimum</li>
+              <li>Octavo => octāvus => octāva => octāvum</li>
+              <li>Noveno => nōnus => nōna => nōnum</li>
+              <li>Décimo => decimus => decima => decimum</li>
+              <li>Undécimo => ūndecimus => ūndecima => ūndecimum</li>
+              <li>Duodécimo => duodecimus => duodecima => duodecimum</li>
+            </ol>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Temas</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Patrística</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Paralelos</summary>
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
@@ -92,48 +140,76 @@
         </li>
         <!-- ****************************** -->
       </ol>
-      <!-- ////////////////////////////////// -->
     </section>
     <!-- ****************************************************************** -->
     <section id="2">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">FECHAS</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
-            <summary>El Texto</summary>
+            <summary>Meses del Año</summary>
+          <p>1 Ianuarius → Enero (dedicado a Jano, dios de los comienzos).  	<br>	
+             2  Februarius → Febrero (derivado de "februa", rituales de purificación).  	<br>	
+             3  Martius → Marzo (dedicado a Marte, dios de la guerra).  	<br>	
+             4  Aprilis → Abril (posiblemente relacionado con "aperire", abrir, refiriéndose a la primavera).  	<br>	
+             5  Maius → Mayo (posiblemente dedicado a Maia, diosa de la fertilidad).  	<br>
+             6  Iunius → Junio (dedicado a Juno, diosa del matrimonio).  	<br>	
+             7  Iulius → Julio (nombrado en honor a Julio César, antes llamado "Quintilis" porque era el quinto mes en el calendario romano).  	<br>	
+             8  Augustus → Agosto (nombrado en honor al emperador Augusto, antes "Sextilis" porque era el sexto mes).  	<br>	
+             9  September → Septiembre (séptimo mes en el calendario original).  	<br>
+             10   October → Octubre (octavo mes).  	<br>	
+             11  November → Noviembre (noveno mes).  	<br>
+             12  December → Diciembre (décimo mes).  	<br>	
+                <br>	
+              Los últimos cuatro meses conservan su numeración del antiguo calendario romano, que comenzaba en marzo.  	<br>	
+              <br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Variaciones en el Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Temas</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Patrística</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Paralelos</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+
         <li>
           <details class="select">
             <summary></summary>
@@ -151,35 +227,49 @@
       <ol>
         <li>
           <details class="select">
-            <summary>El Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Variaciones en el Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Temas</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Patrística</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Paralelos</summary>
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
@@ -201,35 +291,49 @@
       <ol>
         <li>
           <details class="select">
-            <summary>El Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Variaciones en el Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Temas</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Patrística</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Paralelos</summary>
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
@@ -251,35 +355,49 @@
       <ol>
         <li>
           <details class="select">
-            <summary>El Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Variaciones en el Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Temas</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Patrística</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Paralelos</summary>
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
@@ -301,35 +419,49 @@
       <ol>
         <li>
           <details class="select">
-            <summary>El Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Variaciones en el Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Temas</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Patrística</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Paralelos</summary>
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
@@ -351,35 +483,49 @@
       <ol>
         <li>
           <details class="select">
-            <summary>El Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Variaciones en el Texto</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Temas</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Patrística</summary>
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary>Paralelos</summary>
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
