--- a/oracion/oracion.html
+++ b/oracion/oracion.html
@@ -31,6 +31,7 @@
          <ol>
           <h3 class="cita">Católicas</h3>
            <li class="li"><a href="../oracion/rosario.html">ROSARIO</a></li>
+           <li class="li"><a href="../oracion/viaCrucIs.html">VIA CRUCIS</a></li>
 
            <h3 class="cita">Teresa de Jesús</h3>
            <li class="li"><a href="../oracion/CastilloInterior.html">LAS MORADAS</a></li>
