--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </footer>
 </section>
 <!-- ///////////////////////////////////////////////////////// -->
- <script src="./javascript/numeroDeSemana.js"></script>
+ <script src="./js/numeroDeSemana.js"></script>
   </body>
 
 </html>
