--- a/indiceGeneral.html
+++ b/indiceGeneral.html
@@ -48,8 +48,9 @@
           <li class="li"><a href="./Magisterio/index.html">MAGISTERIO</a></li>
           <h2 class="cita"></h2>
           <h3 class="cita">Personal</h3>
+          <li class="li"><a href="./programacion/index.html">PROGRAMACIÓN</a></li>
           <li class="li"><a href="./Ajedrez/index.html">AJEDREZ</a></li>
-          <li class="li"><a href="./fisica/index.html">FÍSICA</a></li>
+          <li class="li"><a href="./ciencias/index.html">CIENCIAS </a></li>
           <li class="li"><a href="./musica/index.html">MÚSICA</a></li>
           <li class="li"><a href="#1">HORARIO</a></li>
           <li class="li"><a href="#8">METANOIA</a></li>
