--- a/ciencias/index.html
+++ b/ciencias/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../../styles/style.css">
-  <title>APOLOGÉTICA</title>
+  <link rel="stylesheet" href="../styles/style.css">
+  <title>CIENCIAS</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -12,12 +12,12 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="./index.html" class="nombre">INICIO </a>
+        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="../indiceGeneral.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init"></h1>
+<h1 class="init">Ciencias</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
@@ -26,10 +26,16 @@
 
 <section id="0">
   <hr>
-  <h1> TEMAS</h1>
+  <h1> </h1>
   <div>
     <ol>
-     li.li*7>a[href="#$"]
+     <li class="li"><a href="./matematicas/index.html">Matemáticas</a></li>
+     <li class="li"><a href="./fisica/index.html">Física</a></li>
+     <li class="li"><a href=""></a></li>
+     <li class="li"><a href=""></a></li>
+     <li class="li"><a href=""></a></li>
+     <li class="li"><a href=""></a></li>
+     <li class="li"><a href=""></a></li>
 
     </ol>
 
@@ -41,32 +47,32 @@
    <!-- /////////////////////////////////////// -->
    <ol>
     <li><details class="select">
-      <summary>El Texto</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Variaciones en el Texto</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Temas</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Patrística</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Paralelos</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Metanoia</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
@@ -84,37 +90,37 @@
   <!-- /////////////////////////////////////// -->
   <ol>
     <li><details class="select">
-      <summary>El Texto</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Variaciones en el Texto</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Paralelos</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Temas</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Patrística</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Magisterio</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Metanoia</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
@@ -135,37 +141,37 @@
     <!-- /////////////////////////////////////// -->
     <ol>
       <li><details class="select">
-        <summary>El Texto</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Variaciones en el Texto</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Paralelos</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Temas</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Patrística</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Magisterio</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Metanoia</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
@@ -184,37 +190,37 @@
   <!-- /////////////////////////////////////// -->
   <ol>
     <li><details class="select">
-      <summary>El Texto</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Variaciones en el Texto</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Paralelos</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Temas</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Patrística</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Magisterio</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Metanoia</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
@@ -233,37 +239,37 @@
    <!-- /////////////////////////////////////// -->
    <ol>
     <li><details class="select">
-      <summary>El Texto</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Variaciones en el Texto</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Paralelos</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Temas</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Patrística</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Magisterio</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Metanoia</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
@@ -283,37 +289,37 @@
     <!-- /////////////////////////////////////// -->
     <ol>
       <li><details class="select">
-        <summary>El Texto</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Variaciones en el Texto</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Paralelos</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Temas</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Patrística</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Magisterio</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Metanoia</summary>
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
@@ -333,36 +339,36 @@
   <!-- /////////////////////////////////////// -->
   <ol>
     <li><details class="select">
-      <summary>El Texto</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Variaciones en el Texto</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Paralelos</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Temas</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Patrística</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->  <li><details class="select">
-      <summary>Magisterio</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Metanoia</summary>
+      <summary></summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
