--- a/ecclesia/lectio/index.html
+++ b/ecclesia/lectio/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../../styles/style.css">
     <title>LECTIO</title>
   </head>
 
@@ -14,8 +14,8 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- **************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="../../indiceGeneral.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
     <!-- ******************************************************* -->
