--- a/ecclesia/Magisterio/index.html
+++ b/ecclesia/Magisterio/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../../styles/style.css">
   <title>FORMACION</title>
 </head>
 <body>
@@ -12,8 +12,8 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="../../indiceGeneral.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
@@ -29,7 +29,7 @@
         <ol>
           <li class="li"><a href="../Magisterio/EnciclicasYDocumentos.html">ENCÍCLICAS Y DOCUMENTOS</a></li>
           <li class="li"><a href="./DerechoCanonico.html">DERECHO CANÓNICO</a></li>
-          <li class="li"><a href="../Magisterio/Patristica/index.html">PATRÍSTICA</a></li>
+          <li class="li"><a href="../Patristica/index.html">PATRÍSTICA</a></li>
           <li class="li"><a href=""></a></li>
       </div>
     </section>
