--- a/ecclesia/doctrinaSocial/index.html
+++ b/ecclesia/doctrinaSocial/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../../styles/style.css">
   <title>DOCTRINA SOCIAL</title>
 </head>
 <body>
@@ -12,8 +12,8 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="../../indiceGeneral.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
@@ -26,7 +26,7 @@
       <h1> TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="/doctrinaSocial/Agenda2030.html">AGENDA 2030</a></li>
+          <li class="li"><a href="./index.html">AGENDA 2030</a></li>
           <li class="li"><a href=""></a></li>
 
         </ol>
