--- a/ecclesia/ordenCarmelita/historiaCarmelita.html
+++ b/ecclesia/ordenCarmelita/historiaCarmelita.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../../styles/style.css">
     <title>Orden Carmelita</title>
   </head>
 
@@ -16,8 +16,8 @@
       <div class="container">
 
         <p class="logo"> CRISTO SALVADOR</p>
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="01formacion.html" class="nombre">FORMACIÓN </a>
+        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="../../indiceGeneral.html" class="nombre">FORMACIÓN </a>
       </div>
     </header> <br>
     <!-- ****************************************************** -->
