--- a/indiceGeneral.html
+++ b/indiceGeneral.html
@@ -37,21 +37,21 @@
       <div>
         <ol>
           <h3 class="cita">Oración</h3>
-          <li class="li"><a href="./lectio/index.html">LECTIO DIVINA</a></li>
-          <li class="li"><a href="./oracion/oracion.html">ORACIÓN</a></li>
-          <li class="li"><a href="./discretio/index.html">DISCRETIO</a></li>
+          <li class="li"><a href="./ecclesia/lectio/index.html">LECTIO DIVINA</a></li>
+          <li class="li"><a href="./ecclesia/oracion/oracion.html">ORACIÓN</a></li>
+          <li class="li"><a href="./ecclesia/discretio/index.html">DISCRETIO</a></li>
           <li class="li"><a href="./liturgia/liturgia.html">LITURGIA</a></li>
 <h3 class="cita">Formación</h3>
-          <li class="li"><a href="./ordenCarmelita/historiaCarmelita.html">ORDEN CARMELITA SEGLAR</a></li>
-          <li class="li"><a href="./historia/index.html">HISTORIA DE LA IGLESIA</a></li>
-          <li class="li"><a href="./doctrinaSocial/index.html">DOCTRINA SOCIAL</a></li>
-          <li class="li"><a href="./Magisterio/index.html">MAGISTERIO</a></li>
+          <li class="li"><a href="./ecclesia/ordenCarmelita/historiaCarmelita.html">ORDEN CARMELITA SEGLAR</a></li>
+          <li class="li"><a href="./ecclesia/historia/index.html">HISTORIA DE LA IGLESIA</a></li>
+          <li class="li"><a href="./ecclesia/doctrinaSocial/index.html">DOCTRINA SOCIAL</a></li>
+          <li class="li"><a href="./ecclesia/Magisterio/index.html">MAGISTERIO</a></li>
           <h2 class="cita"></h2>
           <h3 class="cita">Personal</h3>
           <li class="li"><a href="./programacion/index.html">PROGRAMACIÓN</a></li>
           <li class="li"><a href="./Ajedrez/index.html">AJEDREZ</a></li>
           <li class="li"><a href="./ciencias/index.html">CIENCIAS </a></li>
-          <li class="li"><a href="./musica/index.html">MÚSICA</a></li>
+          <li class="li"><a href="./ecclesia/musica/index.html">MÚSICA</a></li>
           <li class="li"><a href="#1">HORARIO</a></li>
           <li class="li"><a href="#8">METANOIA</a></li>
         </ol>
